2008-01-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_button):
	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init), (clearlooks_gtk2_rc_parse_int),
	(clearlooks_rc_style_parse), (clearlooks_rc_style_merge):
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters), (clearlooks_style_draw_box),
	(clearlooks_style_init_from_rc), (clearlooks_style_copy):
	* engines/clearlooks/src/clearlooks_style.h:
	* engines/clearlooks/src/clearlooks_types.h:
	New option: int reliefstyle to enable/disable shadows on buttons.
	Default is 1 (enable shadows on Gummy and prelight on Glossy)

2008-01-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_button):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters), (clearlooks_style_draw_box):
	* engines/clearlooks/src/clearlooks_types.h:
	Renamed enable_glow to enable_shadow

2008-01-22  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fixed GtkProgressbars inside GtkMenu

2008-01-22  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_tab), (clearlooks_gummy_draw_focus):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_extension):
	Fixed #509226 and minor changes to intends.
	To benzea: Check if you like the current fallback behaviour

2008-01-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	2.13.3 release.

2007-12-31  Benjamin Berg  <benjamin@sipsolutions.net>
